Fix index example

--- a/labs/lab02/lab02.ipynb
+++ b/labs/lab02/lab02.ipynb
@@ -661,7 +661,7 @@
     "baby_names = states[0]\n",
     "for state_df in states[1:]:\n",
     "    baby_names = pd.concat([baby_names, state_df])\n",
-    "baby_names = baby_names.reset_index()"
+    "baby_names = baby_names.reset_index().iloc[:, 1:]"
    ]
   },
   {
