--- a/lectures/lec04/04-groupby.ipynb
+++ b/lectures/lec04/04-groupby.ipynb
@@ -692,7 +692,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.groupby.DataFrameGroupBy object at 0x1105665c0>"
+       "<pandas.core.groupby.groupby.DataFrameGroupBy object at 0x1107acb38>"
       ]
      },
      "execution_count": 19,
