--- a/proj/proj1/proj1.ipynb
+++ b/proj/proj1/proj1.ipynb
@@ -2174,8 +2174,8 @@
     "\n",
     "Create a new dataframe of counts of the null and proportion of null values, storing the result in `fraction_missing_df`. It should have an index called `postal_code_5` and should also have 3 columns:\n",
     "\n",
-    "1. `null count`: The number of missing values for the zip code.\n",
-    "2. `not null count`: The number of present values for the zip code.\n",
+    "1. `count null`: The number of missing values for the zip code.\n",
+    "2. `count non null`: The number of present values for the zip code.\n",
     "3. `fraction null`: The fraction of values that are null for the zip code.\n",
     "\n",
     "Your data frame should be sorted by the fraction null in descending order.\n",
