--- a/lectures/lec03/03-pandas.ipynb
+++ b/lectures/lec03/03-pandas.ipynb
@@ -2,12 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Party\n",
+       "Democratic    48.2\n",
+       "Republican    46.1\n",
+       "Name: %, dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elections.groupby(['Party', 'Year']).mean()['%'][:,2016]"
    ]
   },
   {
@@ -19,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -268,7 +291,7 @@
        "22     Trump   Republican  46.1  2016    win"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
