--- a/lectures/lec04/04-groupby-start.ipynb
+++ b/lectures/lec04/04-groupby-start.ipynb
@@ -54,8 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "percent_grouped_by_party = df['%'].groupby(df['Party'])\n",
-    "type(percent_grouped_by_party)"
+    "percent_grouped_by_party = ...\n",
+    "percent_grouped_by_party"
    ]
   },
   {
@@ -354,11 +354,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for n, g in everything_grouped_by_party:\n",
-    "    print('name:', n)\n",
-    "    display(g.head())"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -676,11 +672,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df[(df[\"Party\"] == \"Democratic\") | (df[\"Party\"] == \"Republican\")]\n",
-    "\n",
-    "df[df[\"Party\"].isin([\"Republican\", \"Democratic\"])]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -754,9 +746,9 @@
    "outputs": [],
    "source": [
     "df_pivot = df.pivot_table(\n",
-    "    index='Party', # the rows (turned into index)\n",
+    "    index='Party',    # the rows (turned into index)\n",
     "    columns='Result', # the column values\n",
-    "    values='%', # the field(s) to processed in each group\n",
+    "    values='%',      # the field(s) to processed in each group\n",
     "    aggfunc=np.mean, # group operation\n",
     ")\n",
     "df_pivot.head()"
