--- a/labs/lab04/lab04.ipynb
+++ b/labs/lab04/lab04.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -849,14 +849,15 @@
    },
    "outputs": [],
    "source": [
-    "q1a = '''The float values usually do not repeat each other, \n",
+    "q1a = '''Countplot is more suitable for qualitative/categorical data rather than quantitative data like age and income.\n",
+    "The values of age and income usually do not repeat each other, \n",
     "the count for most value is only 1 or 2, \n",
     "which making there are too many bars along x axis and very little variance along the y axis.'''\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -870,22 +871,10 @@
       "Running tests\n",
       "\n",
       "---------------------------------------------------------------------\n",
-      "q1a > Suite 1 > Case 1\n",
-      "\n",
-      ">>> 'categorical' in q1a\n",
-      "False\n",
-      "\n",
-      "# Error: expected\n",
-      "#     True\n",
-      "# but got\n",
-      "#     False\n",
-      "\n",
-      "Run only this test case with \"python3 ok -q q1a --suite 1 --case 1\"\n",
-      "---------------------------------------------------------------------\n",
       "Test summary\n",
-      "    Passed: 0\n",
-      "    Failed: 1\n",
-      "[k..........] 0.0% passed\n",
+      "    Passed: 2\n",
+      "    Failed: 0\n",
+      "[ooooooooook] 100.0% passed\n",
       "\n"
      ]
     }
