Add export to pdf tag

--- a/hw/hw3/hw3.ipynb
+++ b/hw/hw3/hw3.ipynb
@@ -1288,7 +1288,9 @@
     "BEGIN QUESTION\n",
     "name: q6b\n",
     "points: 1\n",
-    "-->"
+    "manual: true\n",
+    "-->",
+    "<!-- EXPORT TO PDF -->"
    ]
   },
   {
