submit hw5 lab07 lab08

--- a/labs/lab08/lab08.ipynb
+++ b/labs/lab08/lab08.ipynb
@@ -2,12 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=====================================================================\n",
+      "Assignment: lab08\n",
+      "OK, version v1.13.11\n",
+      "=====================================================================\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize OK\n",
     "from client.api.notebook import Notebook\n",
@@ -45,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -87,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -97,7 +109,113 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Records: 244\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_bill</th>\n",
+       "      <th>tip</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>day</th>\n",
+       "      <th>time</th>\n",
+       "      <th>size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16.99</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10.34</td>\n",
+       "      <td>1.66</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>21.01</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>23.68</td>\n",
+       "      <td>3.31</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24.59</td>\n",
+       "      <td>3.61</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   total_bill   tip     sex smoker  day    time  size\n",
+       "0       16.99  1.01  Female     No  Sun  Dinner     2\n",
+       "1       10.34  1.66    Male     No  Sun  Dinner     3\n",
+       "2       21.01  3.50    Male     No  Sun  Dinner     3\n",
+       "3       23.68  3.31    Male     No  Sun  Dinner     2\n",
+       "4       24.59  3.61  Female     No  Sun  Dinner     4"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = sns.load_dataset(\"tips\")\n",
     "\n",
@@ -130,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -140,10 +258,26 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n",
+      "(3,)\n",
+      "[14 32]\n"
+     ]
+    }
+   ],
    "source": [
     "tips = data['tip']\n",
-    "X = data.drop(columns='tip')"
+    "X = data.drop(columns='tip')\n",
+    "\n",
+    "a= np.array([1,2,3])\n",
+    "b = np.array([[1,2,3],[4,5,6]])\n",
+    "print(b.shape)\n",
+    "print(a.shape)\n",
+    "print(b@a)"
    ]
   },
   {
@@ -178,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -188,7 +322,143 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_bill</th>\n",
+       "      <th>size</th>\n",
+       "      <th>sex_Male</th>\n",
+       "      <th>sex_Female</th>\n",
+       "      <th>smoker_Yes</th>\n",
+       "      <th>smoker_No</th>\n",
+       "      <th>day_Thur</th>\n",
+       "      <th>day_Fri</th>\n",
+       "      <th>day_Sat</th>\n",
+       "      <th>day_Sun</th>\n",
+       "      <th>time_Lunch</th>\n",
+       "      <th>time_Dinner</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16.99</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10.34</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>21.01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>23.68</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24.59</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   total_bill  size  sex_Male  sex_Female  smoker_Yes  smoker_No  day_Thur  \\\n",
+       "0       16.99     2         0           1           0          1         0   \n",
+       "1       10.34     3         1           0           0          1         0   \n",
+       "2       21.01     3         1           0           0          1         0   \n",
+       "3       23.68     2         1           0           0          1         0   \n",
+       "4       24.59     4         0           1           0          1         0   \n",
+       "\n",
+       "   day_Fri  day_Sat  day_Sun  time_Lunch  time_Dinner  \n",
+       "0        0        0        1           0            1  \n",
+       "1        0        0        1           0            1  \n",
+       "2        0        0        1           0            1  \n",
+       "3        0        0        1           0            1  \n",
+       "4        0        0        1           0            1  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def one_hot_encode(data):\n",
     "    \"\"\"\n",
@@ -204,19 +474,36 @@
     "    \n",
     "    Hint: Check out the pd.get_dummies function\n",
     "    \"\"\"\n",
-    "    ...\n",
+    "    return pd.get_dummies(data)\n",
+    "        \n",
     "one_hot_X = one_hot_encode(X)\n",
     "one_hot_X.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "Running tests\n",
+      "\n",
+      "---------------------------------------------------------------------\n",
+      "Test summary\n",
+      "    Passed: 2\n",
+      "    Failed: 0\n",
+      "[ooooooooook] 100.0% passed\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "ok.grade(\"q1a\");"
    ]
@@ -255,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -280,17 +567,33 @@
     "    -----------\n",
     "    A 1D vector representing the linear combination of thetas and features as defined above.\n",
     "    \"\"\"\n",
-    "    ..."
+    "    return np.dot(X, thetas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "Running tests\n",
+      "\n",
+      "---------------------------------------------------------------------\n",
+      "Test summary\n",
+      "    Passed: 3\n",
+      "    Failed: 0\n",
+      "[ooooooooook] 100.0% passed\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "ok.grade(\"q1b\");"
    ]
@@ -321,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -331,7 +634,20 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.094487  , 0.1759912 , 0.18411085, 0.21655235, 0.15712761,\n",
+       "       0.24353555, 0.01519972, 0.17746092, 0.05600946, 0.15199343,\n",
+       "       0.23440129, 0.1662616 ])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from scipy.optimize import minimize\n",
     "\n",
@@ -368,8 +684,8 @@
     "    #       and remember that theta is now a vector. DO NOT hard-code the length of x0;\n",
     "    #       it should depend on the number of features in X.\n",
     "    # 2. Your answer will be very similar to your answer to question 2 from lab 5.\n",
-    "    ...\n",
-    "    return minimize(lambda theta: ..., x0=...)['x']\n",
+    "    return minimize(lambda theta: np.mean(loss_function(y, model(theta, X))), x0=np.zeros(X.shape[1]))['x']\n",
+    "#     return minimize(lambda theta: loss_function(y, model(theta, X)))['x']\n",
     "    # Notice above that we extract the 'x' entry in the dictionary returned by `minimize`. \n",
     "    # This entry corresponds to the optimal theta estimated by the function.\n",
     "\n",
@@ -378,12 +694,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "Running tests\n",
+      "\n",
+      "---------------------------------------------------------------------\n",
+      "Test summary\n",
+      "    Passed: 2\n",
+      "    Failed: 0\n",
+      "[ooooooooook] 100.0% passed\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "ok.grade(\"q2\");"
    ]
@@ -497,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 64,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -507,7 +839,19 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.27057082e+00 -1.05737601e+01 -1.10159204e+16 -1.10159204e+16\n",
+      " -3.94381213e+15 -3.94381213e+15  1.49597326e+16  1.49597326e+16\n",
+      "  1.49597326e+16  1.49597326e+16 -1.50895000e+02 -1.13150000e+02]\n",
+      "Our analytical loss is:  1746.4769950819675\n",
+      "Our numerical loss is:  1.0103535612367378\n"
+     ]
+    }
+   ],
    "source": [
     "def get_analytical_sol(X, y):\n",
     "    \"\"\"\n",
@@ -522,7 +866,8 @@
     "    -----------\n",
     "    The estimate for theta computed using the equation mentioned above\n",
     "    \"\"\"\n",
-    "    ...\n",
+    "    return np.dot(np.linalg.inv(X.T @ X) @ X.T, y)\n",
+    "\n",
     "analytical_thetas = get_analytical_sol(one_hot_X, tips)\n",
     "print(\"Our analytical loss is: \", l2(linear_model(analytical_thetas, one_hot_X), tips).mean())\n",
     "print(\"Our numerical loss is: \", l2(linear_model(minimize_average_loss(l2, linear_model, one_hot_X, tips), one_hot_X), tips).mean())"
@@ -530,12 +875,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "Running tests\n",
+      "\n",
+      "---------------------------------------------------------------------\n",
+      "Test summary\n",
+      "    Passed: 1\n",
+      "    Failed: 0\n",
+      "[ooooooooook] 100.0% passed\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "ok.grade(\"q3a\");"
    ]
@@ -567,9 +928,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our analytical loss is:  1.033285570878662\n",
+      "Our numerical loss is:  1.033285570913447\n"
+     ]
+    }
+   ],
    "source": [
     "def one_hot_encode_revised(data):\n",
     "    \"\"\"\n",
@@ -585,7 +955,7 @@
     "    \n",
     "    Hint: Check out the drop_first parameter of the pd.get_dummies function.\n",
     "    \"\"\"\n",
-    "    ...\n",
+    "    return pd.get_dummies(data, drop_first=True)\n",
     "one_hot_X_revised = one_hot_encode_revised(X)\n",
     "revised_analytical_thetas = get_analytical_sol(one_hot_X_revised, tips)\n",
     "print(\"Our analytical loss is: \", l2(linear_model(revised_analytical_thetas, one_hot_X_revised), tips).mean())\n",
@@ -594,12 +964,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "Running tests\n",
+      "\n",
+      "---------------------------------------------------------------------\n",
+      "Test summary\n",
+      "    Passed: 1\n",
+      "    Failed: 0\n",
+      "[ooooooooook] 100.0% passed\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "ok.grade(\"q3b\");"
    ]
@@ -625,16 +1011,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.save_checkpoint();"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.save_notebook();"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving notebook... Saved 'lab08.ipynb'.\n",
+      "Submit... 100% complete\n",
+      "Submission successful for user: tanjin_he@berkeley.edu\n",
+      "URL: https://okpy.org/cal/data100/sp19/lab8/submissions/Mwokjm\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Save your notebook first, then run this cell to submit.\n",
     "ok.submit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
