Fixed hw6 bugs.

--- a/hw/hw6/hw6.ipynb
+++ b/hw/hw6/hw6.ipynb
@@ -460,7 +460,7 @@
     "        'Average',\n",
     "        'Fair',\n",
     "        'Poor',\n",
-    "        'No_Fireplace'\n",
+    "        'No Fireplace'\n",
     "    ]\n",
     "    \n",
     "    cat_type = CategoricalDtype(categories=cats)\n",
@@ -594,6 +594,7 @@
     "def process_data_gm(data):\n",
     "    \"\"\"Process the data for a guided model.\"\"\"\n",
     "    # One-hot-encode fireplace quality feature\n",
+    "    data = fix_fireplace_qu(data)\n",
     "    data = ohe_fireplace_qu(data)\n",
     "    \n",
     "    # Use rich_neighborhoods computed earlier to add in_rich_neighborhoods feature\n",
@@ -610,7 +611,7 @@
     "                          'fpq_Average',\n",
     "                          'fpq_Fair',\n",
     "                          'fpq_Poor',\n",
-    "                          'fpq_No_Fireplace',\n",
+    "                          'fpq_No Fireplace',\n",
     "                         )\n",
     "    \n",
     "    # Return predictors and response variables separately\n",
