Fixed graphviz issue

--- a/lectures/lec20/prediction_demo.ipynb
+++ b/lectures/lec20/prediction_demo.ipynb
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: tabulate in /home/phil/anaconda3/lib/python3.7/site-packages (0.8.3)\r\n"
+      "Requirement already satisfied: tabulate in /home/phil/anaconda3/lib/python3.7/site-packages (0.8.3)\n"
      ]
     }
    ],
@@ -414,7 +414,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: graphviz in /home/phil/anaconda3/lib/python3.7/site-packages (0.10.1)\r\n"
+      "Requirement already satisfied: graphviz in /home/phil/anaconda3/lib/python3.7/site-packages (0.10.1)\n"
      ]
     },
     {
@@ -1325,7 +1325,7 @@
    ],
    "source": [
     "# plot the the regression tree\n",
-    "!{sys.executable} -m pip install graphviz\n",
+    "!conda install -y graphviz\n",
     "import graphviz \n",
     "\n",
     "dot_data = tree.export_graphviz(clf, out_file=None)\n",
