--- a/lectures/lec20/prediction_demo.ipynb
+++ b/lectures/lec20/prediction_demo.ipynb
@@ -4,13 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prediction: Regression and Classification Demo\n",
-    "\n",
+    "# Demo for \"Prediction: Regression and Classification\" Lecture\n",
     "*Prepared by Philippe Boileau*\n",
     "\n",
     "This notebook contains the code for perfoming the analyses for the case studies introduced during the \"Prediction: Classification and Regression\" lecture. \n",
     "\n",
-    "Prediction methods such as classification and regression trees typically have many tuning parameters/inputs and output values. There are also differences in implementation across software packages. Make sure to consult the documentation to understand how the predictors are built and how to interpret the results. Try modifying tuning parameters for each of the predictors below to see how this influences the results!"
+    "**Note.** Prediction methods such as classification and regression trees typically have many tuning parameters/inputs and output values. There are also differences in implementation across software packages. Make sure to consult the documentation to understand how the predictors are built and how to interpret the results. Try modifying tuning parameters for each of the predictors below to see how this influences the results!"
    ]
   },
   {
@@ -67,11 +66,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using data recently collected from Craiglist, we will attempt to predict the rent price of apartments in Berkeley based on the following five features: Square footage, number of bedrooms, number of bathrooms, latitude, and longitiude. This is a regression problem since the outcome of interest (rent price) is continuous. To accomplish this task, we will fit the following families of models to the data: Linear regression, regression trees, and Random Forests. \n",
+    "Using data recently collected from Craigslist, we will attempt to predict the rent price of apartments in Berkeley based on the following five features: Square footage, number of bedrooms, number of bathrooms, latitude, and longitiude. This is a regression problem since the outcome of interest (rent price) is continuous. To accomplish this task, we will fit the following families of models to the data: Linear regression, regression trees, and Random Forests. \n",
     "\n",
     "We randomly split the data into a learning set (80% of observations) to train the predictors and into a test set (20% of observations) to evaluate and compare their performances.\n",
     "\n",
-    "The Craigslist data are prepared for analysis in the cells below. The Craigslist data are prepared for analysis in the cells below. The results in this notebook will differ from the results shown in lecture due to the randomness induced by splitting the learning and test sets. Try changing the random seeds to see how this will affect the results."
+    "The Craigslist data are prepared for analysis in the cells below. The results in this notebook will differ from the results shown in lecture due to the randomness induced by splitting the data into learning and test sets. Try changing the random seed to see how this will affect the results."
    ]
   },
   {
@@ -1491,21 +1490,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The MNIST Handwritten Digits dataset consists of 70,000 images of handwritten digits, where the responses consist of labels for the digits 0 through 9 and the features are the grey-scale values of each image's pixels. Using a subset of this dataset, for which the image size was reduced from 28 x 28 pixels to 8 x8 pixels, we will build classifiers that identify the images' handwritten digits. The following methods will be used to accomplish this task: Logistic regression, k-nearest neighbours, classification trees, and Random Forests. The learning set consists of 1,540 randomly selected images from the full dataset and the test set contains the remaining 257 images.\n",
-    "\n",
-    "The data are included in the `sklean.datasets` library. It is loaded into our environment in the following cell."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sklearn.datasets\n",
+    "## import sklearn.datasets\n",
     "mnist = sklearn.datasets.load_digits()\n",
     "\n",
     "# format mnist data bunch into a dataframe and an array\n",
@@ -2845,7 +2835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
