--- a/proj/proj3/proj3.ipynb
+++ b/proj/proj3/proj3.ipynb
@@ -146,7 +146,7 @@
     "- Longitude is between -74.03 and -73.75 (inclusive of both boundaries)\n",
     "- Latitude is between 40.63 and 40.85 (inclusive of both boundaries)\n",
     "\n",
-    "*Hint*: Your solution will be shorter if you write Python code to generate the SQL query. Try not to copy and paste code.\n",
+    "*Hint*: Your solution will be shorter if you write Python code to generate the SQL query string. Try not to copy and paste code.\n",
     "\n",
     "*The provided tests check that you have constructed `all_taxi` correctly.*\n",
     "\n",
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A scatter plot of pickup locations shows that most of them are on the island of Manhattan. The empty white square is Central Park; cars are not allowed there."
+    "A scatter plot of pickup locations shows that most of them are on the island of Manhattan. The empty white rectangle is Central Park; cars are not allowed there."
    ]
   },
   {
